# toybrain

./: README.md  pyproject.toml
src/toybrain/: __init__.py  main.py
