[project]
name = "toybrain"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sndyuk", email = "sanada@sndyuk.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "matplot>=0.1.9",
    "scikit-learn>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
